crates/brom-macros/tests/fixtures/fail_bad_attribute.stderr
error: unrecognized brom attribute
 --> tests/fixtures/fail_bad_attribute.rs:4:8
  |
4 | #[brom(unknown_struct_attr = "oops")]
  |        ^^^^^^^^^^^^^^^^^^^

error: unrecognized brom attribute
 --> tests/fixtures/fail_bad_attribute.rs:6:12
  |
6 |     #[brom(invalid_field_attr)]
  |            ^^^^^^^^^^^^^^^^^^

error: unrecognized brom attribute
 --> tests/fixtures/fail_bad_attribute.rs:8:12
  |
8 |     #[brom(table = 123)]
  |            ^^^^^
